# Ollama-chat

./: .gitignore  pyproject.toml  rxconfig.py
ollama_chat/: ollama_chat.py
ollama_chat/components/: sidebar.py
ollama_chat/pages/: dashboard.py  index.py  settings.py
ollama_chat/templates/: template.py
