[tool.poetry]
name = "ollama-chat"
version = "0.1.0"
description = "Web Application that use Reflex for the frontend and Semantic Kernel and Ollama for the backend"
authors = ["Manuelji <manueljl22@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
reflex = "0.3.9"
langchain = "^0.1.4"
pytest = "^8.0.0"
pylint = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
